--- a/exercicios/ex007/index.html
+++ b/exercicios/ex007/index.html
@@ -20,7 +20,7 @@ font-family: Arial, Helvetica, sans-serif;
 <body>
     <main>
     <h1>
-        ela 
+        portuguese
     </h1>
     <h2>
         titulo 2
