--- a/exercicios/ex009/index.html
+++ b/exercicios/ex009/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <style>
         #container{
-            background-image: url(imagens/pattern004.png);
+            background-image: url(imagens/target001.png);
             background-size: 100% 100%;
             position: relative;
             height: 96vh;
@@ -15,7 +15,7 @@
             background-color: purple;
         }
         #conteudo{
-            background-image: url(imagens/pattern001.png);
+            background-image: url(imagens/target001.png)
             background-size: 100% 100%;
             position: absolute;
             height: 200px;
