--- a/exercicios/ex009/index.html
+++ b/exercicios/ex009/index.html
@@ -15,7 +15,7 @@
             background-color: purple;
         }
         #conteudo{
-            background-image: url(imagens/target001.png)
+            background-image: url(imagens/target001.png);
             background-size: 100% 100%;
             position: absolute;
             height: 200px;
