--- a/exercicios/ex009/index.html
+++ b/exercicios/ex009/index.html
@@ -20,7 +20,7 @@
             position: absolute;
             height: 200px;
             width: 400px;
-            background-color: goldenrod;
+            background-color: yellow;
             left: 50%;
             top: 50%;
             transform: translate(-50%, -50%);
