--- a/exercicios/d012/index.html
+++ b/exercicios/d012/index.html
@@ -45,7 +45,7 @@
 </head>
 <body>
     <header>
-        <h1>Cordel Moderno</h1>
+        <h1>CORDEL MODERNO</h1>
         <nav>Por <a href=" https://www.recantodasletras.com.br/poesias/3186743">Milton Duarte</a></nav>
     </header>
     <main>
