--- a/exercicios/d012/index.html
+++ b/exercicios/d012/index.html
@@ -26,6 +26,7 @@
         header{
             color:white;
             background-color: black;
+            text-align: center;
 
         }
         header>h1{
