--- a/exercicios/d012/index.html
+++ b/exercicios/d012/index.html
@@ -36,6 +36,9 @@
         header>nav{
             font-family: var(--font-link);
         }
+        header>p{
+            text-decoration: none;
+        }
     
         main{
             background-color: white;
@@ -47,7 +50,7 @@
 <body>
     <header>
         <h1>CORDEL MODERNO</h1>
-        <nav>Por <a href=" https://www.recantodasletras.com.br/poesias/3186743">Milton Duarte</a></nav>
+        <p>Por <a href=" https://www.recantodasletras.com.br/poesias/3186743">Milton Duarte</a></p>
     </header>
     <main>
     <p>Estou ficando cansado</p>
