--- a/exercicios/d012/index.html
+++ b/exercicios/d012/index.html
@@ -27,6 +27,7 @@
             color:white;
             background-color: black;
             text-align: center;
+            width: 500px;
 
         }
         header>h1{
