--- a/exercicios/d012/index.html
+++ b/exercicios/d012/index.html
@@ -35,7 +35,7 @@
         }
         header>h1{
          font-family: var(--font-titulo);
-         font-size: 8em;
+         font-size: 60px;
         
         }
         header>p{
