--- a/exercicios/d012/index.html
+++ b/exercicios/d012/index.html
@@ -36,6 +36,7 @@
         header>h1{
          font-family: var(--font-titulo);
          font-size: 400px;
+         height: 60px;
         
         }
         header>p{
