--- a/exercicios/d012/index.html
+++ b/exercicios/d012/index.html
@@ -37,6 +37,7 @@
          font-family: var(--font-titulo);
          font-size: 400px;
          height: 60px;
+         margin: 30px;
         
         }
         header>p{
